    reporting.  (robs)
  o Add AIFF-C output support.  (shashimoto)
  o -V now gives only user-relevant messages, use -V -V to get
    developer-relevant messages.  (robs)
  o Old and new rate code removed; the "rate" effect is implemented
    for backwards compatibility by "resample".
  o Preview mode now removed, as all it did was use rate rather than
    resample, and rate has been removed.
  o Improved synth usage (by introducing --) and improved the synth
    entry in the man-page.  (robs)
  o Added command line options for specifying the output file
    comment.  (robs)
  o Improved the accuracy of integer and floating point PCM
    conversions.  (robs)
  o Added large file support.  (Reuben Thomas)
  o Higher quality audio speed adjustment; also fixes [1155364].  (robs)
  o Replacement flanger effect; also fixes [1393245].  (robs)
  o Added ability to merge e.g. 2 mono files to 1 stereo file
    [FR# 1297076].  (robs)
  o Added Lua scripting, allowing effects and format to be implemented
    in Lua (http://www.lua.org/).  (Reuben Thomas)
  o Several effects are now optimised out in situations where they need
    do nothing, e.g. changing rate from 8000 to 8000, or changing volume
    by 0dB [Bug# 1395781].  (robs)
  o Removed (for output file only) the potentially
    problematic -v option.  Use the vol effect instead.  (robs)
  o Added --interactive option to prompt to overwrite pre-existing
    output file.  (robs)
  o Added silence padding effect.  (robs)
  o Improved multi-channel file reading; fixes [1599990].  (robs)
  o New options for specifying endianness (and separate options for
    nibble & bit reversal) [FR# 1621702].  (robs)
  o Add seek support for GSM data in WAV files. Rafal Maszkowski
  o Fix [1627972] AIFF read bug when MARK chunk present.  (Richard Fuller)
  o Fix [1160154] VOX to WAV conversion problem.  (robs)
  o New .ima file format for raw IMA ADPCM.  (robs)
  o Build system overhaul to use the full set of GNU autotools.