@@ -412,6 +412,24 @@ without actually processing any audio.  E.g.
 \fB\-q\fR, \fB\-\-no\-show\-progress\fR
 Run in quiet mode when SoX wouldn't otherwise do so;
 this is the converse of the \fB\-S\fR option.
+.PP
+\fB\-\-replay\-gain=track\fR
+.br
+\fB\-\-replay\-gain=album\fR
+.br
+\fB\-\-replay\-gain=off\fR
+.if t .sp -.5
+.if n .sp -1
+.TP
+\ 
+Select whether or not to apply replay-gain adjustment to input files.
+The default is
+.B track
+for
+.B play
+and
+.B off
+otherwise.
 .TP
 \fB\-S\fR, \fB\-\-show\-progress\fR
 Display input file format/header information and input file(s)
